# basispoort-sync-client

./: .env.dist  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml  release.zsh
.config/: nextest.toml
.github/workflows/: rust.yml
src/: error.rs  hosted_license_provider.rs  hosted_sites.rs  institutions.rs  lib.rs  rest.rs
src/hosted_license_provider/: client.rs  model.rs
src/institutions/: client.rs  model.rs
tests/: hosted_license_provider_lifecycle.rs  institutions_properties_service.rs  institutions_service.rs  integration_test.rs  synchronization_permissions_mutations.rs
tests/util/: mod.rs
