[package]
authors = ["Leonie Philine Bitto <awoo@posteo.de>"]
description = "An API client to help synchronize institution data with the Basispoort educational material SSO service."
edition = "2021"
license = "MPL-2.0"
name = "basispoort-sync-client"
version = "0.1.0"

[dependencies]
base64 = "0.13.1"
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.147", features = ["derive", "alloc"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
url = "2.3.1"

[dev-dependencies]
dotenvy = "0.15.6"
tokio = { version = "1.21.2", features = ["test-util", "macros"] }