[package]
name = "basispoort-sync-client"
description = "An API client to help synchronize institution data with the Basispoort educational material SSO service."
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/basispoort-sync-client"
repository = "https://github.com/LeoniePhiline/basispoort-sync-client"
version = "0.5.1"

[features]
default = ["institutions", "hosted-license-provider"]
institutions = ["dep:chrono"]
hosted-license-provider = []

[dependencies]
base64 = "0.21.1"
bytes = "1.4.0"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"], optional = true }
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.147", features = ["derive", "alloc"] }
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
thiserror = "1.0.58"
tokio = { version = "1.23.1", default-features = false, features = ["fs", "io-util"] }
tracing = "0.1.37"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15.7"
itertools = "0.10.5"
tokio = { version = "1.23.1", features = ["test-util", "macros", "fs", "io-util", "sync", "parking_lot"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
