[package]
name = "basispoort-sync-client"
description = "An API client to help synchronize institution data with the Basispoort educational material SSO service."
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/basispoort-sync-client"
repository = "https://github.com/LeoniePhiline/basispoort-sync-client"
version = "0.6.0"

[features]
default = ["institutions", "hosted-license-provider"]
institutions = ["dep:chrono"]
hosted-license-provider = []

[dependencies]
base64 = "0.22.0"
bytes = "1.6.0"
chrono = { version = "0.4.37", default-features = false, features = ["clock", "serde"], optional = true }
reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "json", "charset", "http2", "macos-system-configuration", "gzip", "brotli"] }
serde = { version = "1.0.197", features = ["derive", "alloc"] }
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", default-features = false, features = ["fs", "io-util"] }
tracing = "0.1.40"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15.7"
itertools = "0.12.1"
tokio = { version = "1.37.0", features = ["test-util", "macros", "fs", "io-util", "sync", "parking_lot"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
